(fix): pr feedback, implement prettier
